src/main/java/semantic/symbolTable/test/failing/redefinedStruct.ru
/? RedefinedStructException
struct Hola {}
struct Hola {}
start {}

/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 3 | 8 | Struct redefinida: Hola |